# catomistic

./: LICENSE  README.md  config_models.py  input_run.py  plot_results.py  pyproject.toml
examples/: main_run_script.py
src/: screen.py
src/catomistic/core/: __init__.py  config_models.py  screen.py
src/catomistic/utils/: create_cif_test.py
