[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "catomistic"
version = "0.1.0"
description = "Automated catalyst screening"
authors = [
    {name = "Cameron Owen", email = "camowen900@gmail.com"},
]
dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "torch>=2.2.0,<2.3.0",
    "mace-torch>=0.3.0,<0.4.0",
    "ase>=3.22.0,<4.0.0",
    "pymatgen>=2023.0.0,<2026.0.0",
    "rdkit>=2023.0.0,<2025.0.0",
    "scipy>=1.15.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "tqdm>=4.65.0,<5.0.0",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0,<4.0.0",
    "plotly>=5.0.0,<7.0.0",
]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.0.0,<6.0.0",
    "mypy>=1.0.0,<2.0.0",
    "ruff>=0.1.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "sphinx>=7.0.0,<8.0.0",
    "sphinx-rtd-theme>=1.0.0,<2.0.0",
]
docs = [
    "sphinx>=7.0.0,<8.0.0",
    "sphinx-rtd-theme>=1.0.0,<2.0.0",
    "nbsphinx>=0.9.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/cjowen1/catomistic"
Documentation = "https://catomistic.readthedocs.io"
Repository = "https://github.com/cjowen1/catomistic.git"
Issues = "https://github.com/cjowen1/catomistic/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/catomistic"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=catomistic"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src/catomistic"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "raise ImportError",
] 